# fastapi-learning

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
phresh-tutorial/: README.md  docker-compose.yml
phresh-tutorial/backend/: Dockerfile  alembic.ini  requirements.txt
phresh-tutorial/backend/app/: utils.py
phresh-tutorial/backend/app/api/: server.py
phresh-tutorial/backend/app/api/dependencies/: database.py
phresh-tutorial/backend/app/api/routes/: __init__.py  cleanings.py  users.py
phresh-tutorial/backend/app/core/: config.py  tasks.py
phresh-tutorial/backend/app/db/: tasks.py
phresh-tutorial/backend/app/db/migrations/: env.py  script.py.mako
phresh-tutorial/backend/app/db/migrations/versions/: 34b3a977eb60_create_cleanings_table.py
phresh-tutorial/backend/app/db/repositories/: cleanings.py  users.py
phresh-tutorial/backend/app/models/: base.py  cleaning.py  token.py  user.py
phresh-tutorial/backend/app/services/: authentication.py
phresh-tutorial/backend/tests/: conftest.py  test_cleanings.py  test_users.py
