[flake8]
exclude = .git,.tox,*/migrations/*,*/.venv,*/venv
max-line-length = 119

[options]
python_requires = >= 3.4

[isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 119
multi_line_output = 5
skip = migrations
known_third_party = sqlalchemy,pydantic,databases,starlette
known_fastapi = fastapi
sections=FUTURE,STDLIB,THIRDPARTY,FASTAPI,FIRSTPARTY,LOCALFOLDER

[mypy]
ignore_missing_imports = true

[mypy.*.migrations.*]
ignore_errors = true
